<resources>
    <string name="app_name">Let\'O\'renT</string>
    <string name="welcome_string">Best way to market your house</string>
    <string name="next">next</string>
    <string name="temp_address">24 Munondo Rd, Budiriro, Harare</string>
    <string name="temp_city">Harare</string>
    <string name="temp_houses">5 rooms at</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="google_sign_in">Google</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="no_account">Don\'t have an account? Sign up..</string>
    <string name="back_to_login">Back to login</string>
    <string name="sign_up">Sign up</string>
    <string name="about">About</string>
    <string name="home">HOME</string>
    <string name="_about">This application was developed by  Simple Developers a company which focuses
        on developing android applications for many organisations in Zimbabwe. \nThis is one of our large scale mobile application which
    accommodates two types of users of which only one type needs to be registered</string>
</resources>
