<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/app_bar_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />
 <!--   <item
        android:id="@+id/app_bar_switch"
        android:title="Switch"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/switch_item" />-->

    <item
        android:id="@+id/item_login"
        android:title="@string/login"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item_help"
        android:title="@string/help"
        android:orderInCategory="3"
        app:showAsAction="never"/>
</menu>