<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="cf.simpledevelopers.letorent.Login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_login_mail"
                android:hint="@string/email"
                android:padding="@dimen/padding"
                android:inputType="textEmailAddress"
                android:fontFamily="casual"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:layout_marginBottom="@dimen/padding"
                android:backgroundTint="@android:color/white"/>

            <EditText
                android:id="@+id/et_login_password"
                android:hint="@string/password"
                android:padding="@dimen/padding"
                android:fontFamily="casual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@android:color/white"
                />

            <RelativeLayout
                android:padding="@dimen/padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/bt_login"
                    android:layout_width="wrap_content"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    android:layout_height="wrap_content">

                </Button>
            </RelativeLayout>
            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:layout_marginTop="@dimen/padding"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"/>
            <LinearLayout
                android:layout_marginTop="@dimen/largest_margin"
                android:orientation="horizontal"
                android:padding="@dimen/padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/bt_google_sign_in"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/google_sign_in"/>
                <Button
                    android:id="@+id/bt_facebook_sign_in"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/smallest_margin"
                    android:layout_marginEnd="@dimen/smallest_margin"
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/facebook"/>
                <Button
                    android:id="@+id/bt_twitter_sign_in"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/twitter"/>



            </LinearLayout>
            <TextView
                android:id="@+id/tv_no_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/no_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
