<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="cf.simpledevelopers.letorent.SignUp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_sign_up_email"
                android:hint="@string/email"
                android:padding="@dimen/padding"
                android:inputType="textEmailAddress"
                android:fontFamily="casual"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:layout_marginBottom="@dimen/padding"
                android:backgroundTint="@android:color/white"/>

            <EditText
                android:id="@+id/et_sign_up_password"
                android:hint="@string/password"
                android:padding="@dimen/padding"
                android:fontFamily="casual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@android:color/white"
                />

            <RelativeLayout
                android:padding="@dimen/padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/bt_sign_up"
                    android:layout_width="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    android:layout_height="wrap_content">
                </Button>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
